--- a/src/main/webapp/css/semantic.css
+++ b/src/main/webapp/css/semantic.css
@@ -21699,6 +21699,7 @@ Floated Menu / Item
 /* Active */
 
 .ui.pagination.menu .active.item {
+  font-weight: bold;
   border-top: none;
   padding-top: 0.92857143em;
   background-color: rgba(0, 0, 0, 0.05);
