--- a/src/main/webapp/css/semantic.css
+++ b/src/main/webapp/css/semantic.css
@@ -89,7 +89,7 @@ footer,
 header,
 nav,
 section {
- /display: block;
+  display: block;
 }
 
 /**
@@ -17466,7 +17466,7 @@ ol.ui.horizontal.list li:before,
 
 .ui.form .field {
   clear: both;
-  margin: 0em 0em 0em;
+  margin: 0em 0em 1em;
 }
 
 .ui.form .field:last-child,
@@ -17484,7 +17484,7 @@ ol.ui.horizontal.list li:before,
 ---------------------*/
 
 .ui.form .field > label {
-  
+  display: block;
   margin: 0em 0em 0.28571429rem 0em;
   color: rgba(0, 0, 0, 0.87);
   font-size: 0.92857143em;
